name:                hdevtools
version:             0.1.0.0
synopsis:            TODO ...
-- description:         
license:             MIT
license-file:        LICENSE
author:              Bit Connor
maintainer:          mutantlemon@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable hdevtools
  hs-source-dirs:      src
  ghc-options:         -Wall
  cpp-options:         -DCABAL
  main-is:             Main.hs
  other-modules:       Client,
                       CommandArgs,
                       CommandLoop,
                       Daemonize,
                       Info,
                       Main,
                       Server,
                       Types,
                       Util,
                       Paths_hdevtools
  build-depends:       base,
                       cmdargs,
                       directory,
                       ghc,
                       ghc-paths,
                       ghc-syb-utils,
                       syb,
                       network,
                       time,
                       unix
