name:                hdevtools
version:             0.1.0.2
synopsis:            Persistent GHC powered background server for FAST haskell development tools
-- description:         
license:             MIT
license-file:        LICENSE
author:              Bit Connor
maintainer:          mutantlemon@gmail.com
copyright:           See AUTHORS file
category:            Development
homepage:            https://github.com/bitc/hdevtools/
bug-reports:         https://github.com/bitc/hdevtools/issues/
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/bitc/hdevtools.git

executable hdevtools
  hs-source-dirs:      src
  ghc-options:         -Wall
  cpp-options:         -DCABAL
  main-is:             Main.hs
  other-modules:       Client,
                       CommandArgs,
                       CommandLoop,
                       Daemonize,
                       Info,
                       Main,
                       Server,
                       Types,
                       Util,
                       Paths_hdevtools
  build-depends:       base == 4.*,
                       cmdargs,
                       directory,
                       ghc,
                       ghc-paths,
                       ghc-syb-utils,
                       syb,
                       network,
                       time,
                       unix
