name:                hdevtools
version:             0.1.0.4
synopsis:            Persistent GHC powered background server for FAST haskell development tools
description:
    'hdevtools' is a backend for text editor plugins, to allow for things such as
    syntax and type checking of Haskell code, and retrieving type information, all
    directly from within your text editor.
    .
    The advantage that 'hdevtools' has over competitors, is that it runs silently
    in a persistent background process, and therefore is able to keeps all of your
    Haskell modules and dependent libraries loaded in memory. This way, when you
    change only a single source file, only it needs to be reloaded and rechecked,
    instead of having to reload everything.
    .
    This makes 'hdevtools' very fast for checking syntax and type errors (runs just
    as fast as the ':reload' command in GHCi).
    .
    In fact, syntax and type checking is so fast, that you can safely enable auto
    checking on every save. Even for huge projects, checking is nearly instant.
    .
    Once you start using 'hdevtools' and you get used to having your errors shown
    to you instantly (without having to switch back and forth between GHCi and your
    editor), and shown directly on your code, in your editor (without having to
    wait forever for GHC to run) you will wonder how you ever lived without it.
    .
    In addition to checking Haskell source code for errors, 'hdevtools' has tools
    for getting info about identifiers, and getting type information for snippets
    of code.

license:             MIT
license-file:        LICENSE
author:              Bit Connor
maintainer:          mutantlemon@gmail.com
copyright:           See AUTHORS file
category:            Development
homepage:            https://github.com/bitc/hdevtools/
bug-reports:         https://github.com/bitc/hdevtools/issues/
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/bitc/hdevtools.git

executable hdevtools
  hs-source-dirs:      src
  ghc-options:         -Wall
  cpp-options:         -DCABAL
  main-is:             Main.hs
  other-modules:       Client,
                       CommandArgs,
                       CommandLoop,
                       Daemonize,
                       Info,
                       Main,
                       Server,
                       Types,
                       Util,
                       Paths_hdevtools
  build-depends:       base == 4.*,
                       cmdargs,
                       directory,
                       ghc,
                       ghc-paths,
                       syb,
                       network,
                       time,
                       unix
